Melhorias no relatório e atualizado readme

--- a/report.html
+++ b/report.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Relatório de clientes</title>
+    <title>
+        #titulo
+    </title>
 
     <!--Imports da biblioteca de gráficos e estilos-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -26,7 +28,9 @@
     <div class="container">
         <div class="row">
             <p><b>
-                    <h3 style="margin-top:20px">Relatório de Clientes</h3>
+                    <h3 style="margin-top:20px">
+                        #titulo
+                    </h3>
                 </b></p>
         </div>
         <div class="row">
