--- a/reportCreated.html
+++ b/reportCreated.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RelatÃ³rio de clientes</title>
+    <title>
+Relatório de Clientes
+    </title>
 
     <!--Imports da biblioteca de grÃ¡ficos e estilos-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -26,7 +28,9 @@
     <div class="container">
         <div class="row">
             <p><b>
-                    <h3 style="margin-top:20px">RelatÃ³rio de Clientes</h3>
+                    <h3 style="margin-top:20px">
+Relatório de Clientes
+                    </h3>
                 </b></p>
         </div>
         <div class="row">
@@ -48,14 +52,14 @@
                                 </tr>
                                 <tr>
                                     <td>Total de registros: <b>
-3
+1
                                         </b></td>
                                 </tr>
                             </table>
                         </div>
                         <div class="col">
                             <table class="text-right">
-
+<tr>     <td>Estado: <b>São Paulo</b></td></tr>
                             </table>
                         </div>
                     </div>
@@ -73,7 +77,7 @@
                     </tr>
                 </thead>
                 <tbody>
-<tr>     <td>1</td>    <td>Chavantes</td>    <td>São Paulo</td></tr><tr>     <td>2</td>    <td>Canitar</td>    <td>Rondônia</td></tr><tr>     <td>3</td>    <td>Ourinhos</td>    <td>São Paulo</td></tr>
+<tr>     <td>3</td>    <td>sdadas</td>    <td>Ourinhos</td></tr>
                 </tbody>
             </table>
         </div>
